<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2013 Matt Lykins

This file is part of Quantized Meal Tracker.

Quantized Meal Tracker is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Quantized Meal Tracker is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Quantized Meal Tracker.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="app_name">Quantized Meal Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="_500">500</string>
    <string name="plus_half_meal">+1/2 Meal</string>
    <string name="plus_one_meal">+1 Meal</string>
    <string name="plus_two_meal">+2 Meal</string>
    <string name="minus_half_meal">-1/2 Meal</string>
    <string name="minus_one_meal">-1 Meal</string>
    <string name="minus_two_meal">-2 Meal</string>
    <string name="plus_half">+1/2</string>
    <string name="plus_one">+1</string>
    <string name="plus_two">+2</string>
    <string name="minus_half">-1/2</string>
    <string name="minus_one">-1</string>
    <string name="minus_two">-2</string>
    <string name="undo">Undo</string>
    <string name="reset">Reset</string>
    <string name="title_activity_about">About</string>
    <string name="hello_world">Hello world!</string>

</resources>
